tests/substructural/composition/enum_drop_with_out_ref_payload.err.expected
error: at 2:30: [COMP-DropMarkerNotSatisfied] In enum 'Bad' (marked Drop), variant 'A' payload type &out i64 is not Drop
   |
 2 |             enum Bad: Drop { A: &out i64 }
   |                              ^^^^^^^^^^^
